# apue

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  hole_file
.cargo/: config.toml
.devcontainer/: devcontainer.json
crates/apue_common/: Cargo.toml
crates/apue_common/src/: lib.rs
crates/apue_common/src/os/unix/: fs.rs
crates/apue_common/src/os/unix/fs/: file_type_etx.rs
crates/apue_common/src/os/windows/fs/: file_type_etx.rs
crates/chapter_10/: Cargo.toml
crates/chapter_2/: Cargo.toml
crates/chapter_3/: Cargo.toml
crates/chapter_4/: Cargo.toml
crates/chapter_5/: Cargo.toml
crates/chapter_6/: Cargo.toml
crates/chapter_8/: Cargo.toml
crates/chapter_9/: Cargo.toml
src/: common.rs  common_mod.rs  lib.rs
src/common/r_os/: unix.rs
src/common/r_os/unix/r_fs/: r_file_type_etx.rs
src/common_mod/: r_error.rs  r_os.rs
src/common_mod/r_os/: windows.rs
src/common_mod/r_os/unix/r_fs/: r_file_type_etx.rs
src/common_mod/r_os/windows/: r_fs.rs
src/common_mod/r_os/windows/r_fs/: r_file_type_etx.rs
