[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Sword Coming <impish-clang-swell@duck.com>"]
edition = "2021"
publish = false

[workspace.dependencies]
apue_common = { path = "crates/apue_common", version = "~0.1.0" }
ascii = "~1.1.0"
nix = { version = "~0.29.0", default-features = false }
