[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Sword Coming <impish-clang-swell@duck.com>"]
edition = "2024"
publish = false
repository = "https://github.com/jscptman/apue"

[workspace.dependencies]
apue_common = { path = "crates/apue_common", version = "~0.1.0" }
nix = "~0.29.0"
