[package]
authors.workspace = true
edition.workspace = true
name = "chapter_10"
publish.workspace = true
repository = "https://github.com/jscptman/apue/chapter_10"
version = "0.1.0"

[[bin]]
name = "10_2"
path = "src/bin/10.2.rs"

[[bin]]
name = "10_6"
path = "src/bin/10.6.rs"

[[bin]]
name = "10_9"
path = "src/bin/10.9.rs"

[[bin]]
name = "10_10"
path = "src/bin/10.10.rs"
required-features = ["chrono"]

[[bin]]
name = "10_11"
path = "src/bin/10.11.rs"
required-features = ["10_11"]

[[bin]]
name = "10_12"
path = "src/bin/10.12.rs"

[dependencies]
chrono = { version = "~0.4.39", optional = true }
nix = { workspace = true, optional = true }

[features]
10_11 = ["nix/resource", "nix/ucontext"]
default = ["nix/signal"]
